# Ulti_Argus_Monorepo

./: .dockerignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  implementation_plan.md.resolved  install.sh  uninstall.sh
DeepPacketSentinel/common/: Cargo.toml
DeepPacketSentinel/common/src/: lib.rs
DeepPacketSentinel/common/tests/: token_bucket_test.rs
DeepPacketSentinel/userspace/: Cargo.toml
DeepPacketSentinel/userspace/src/: main.rs
DeepPacketSentinel/userspace/src/engine/: fast_path.rs  kronos_sender.rs  mod.rs  normalization.rs  policy.rs  protocol.rs  stats.rs
Ulti_argus/To_Recycle/: .gitignore  README.md  TESTING.md  aegis-config.example.yaml  example-retina-config.yaml  mnemosyne-config.example.yaml  pyproject.toml  requirements.txt  test_python.py  update.sh
Ulti_argus/To_Recycle/.github/workflows/: release.yml
Ulti_argus/To_Recycle/Argus_V_clone/Argus_V-main/: INSTALL.md  README.COMPLIANCE.md  RELEASE_PACKAGE.md  SUMMARY.md  TESTING.md  argus-rollback  requirements.txt  run_train.sh  run_trainer.py
Ulti_argus/To_Recycle/Argus_V_clone/Argus_V-main/README.Docs/: ACCESS-CONTROL-LICENSING.md  Aegis.md  COMPLIANCE.md  Configuration.md  DATA-PROTECTION-INDIA.md  Mnemosyne.md  NGO-LICENSING-AGREEMENT.md
Ulti_argus/To_Recycle/Argus_V_clone/Argus_V-main/configs/: sample_free_tier.yaml
Ulti_argus/To_Recycle/Argus_V_clone/Argus_V-main/docs/: DEPLOYMENT.md
Ulti_argus/To_Recycle/Argus_V_clone/Argus_V-main/scripts/: create_release.sh  generate_foundation_model.py  grant-branch-access.sh  revoke-branch-access.sh  (+1 more)
Ulti_argus/To_Recycle/README.Docs/: DATA-DELETION-PROCEDURES.md  FIREBASE-PIPELINE.md  Schema.md
Ulti_argus/To_Recycle/docs/: DEPLOYMENT.md  SUPPORT.md
Ulti_argus/To_Recycle/models/: payload_ae.pth  payload_classifier.pth
Ulti_argus/To_Recycle/scripts/: argus-kernel.service  debug_system.py  deploy_remote.py  eval_accuracy.py  install.sh  live_test.py  probe.py
Ulti_argus/To_Recycle/src/aegis/: api_server.py
Ulti_argus/To_Recycle/src/argus_plugins/: chimera_deception.py  dicom_inspector.py  gdpr_auditor.py  ghost_service.py  honey_mesh.py  jitter_hunter.py  pqc_scout.py
Ulti_argus/To_Recycle/src/mnemosyne/: inference.py
Ulti_argus/To_Recycle/tests/: test_integration.py  test_jitter.py  test_plugins.py
(+219 files in other folders)
